<resources>
    <string name="app_name">Student_Guide</string>
    <string name="Edit_TextName" translatable="false" />
    <string name="your_name">YOUR NAME</string>
    <string name="image2" translatable="false">TODO</string>
    <string name="image1" translatable="false">TODO</string>
    <string name="button1">LEVEL 1</string>
    <string name="button2">LEVEL 2</string>
    <string name="button3">LEVEL 3</string>
    <string name="button4">LEVEL 4</string>
    <string name="textview1">Mansoura University</string>
    <string name="textview2">Faculty Of Engineering</string>
    <string name="textview3">Electronics And Communication Department</string>
    <string name="register">Register</string>
    <string name="inputUsername" translatable="false"></string>
    <string name="btnRegister">Register</string>
    <string name="alreadyhaveaccount">Already Have an Account?</string>
    <string name="inputEmail" translatable="false" />
    <string name="inputPassword" translatable="false" />
    <string name="inputConfirmPassword" translatable="false" />
    <string name="login">Login</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="btnlogin">Login</string>
    <string name="signup">Sign Up?</string>
    <string name="dont_have_an_account">Don\'t have an Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>